--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>staff</title>
+    <link rel="icon" href="https://cn.vuejs.org/images/logo.png" type="image/png">
   </head>
   <body>
     <div id="app"></div>
